use Java 15 for BellSoft JavaFX enabled JDK and --enable-preview